--- a/qml-classifier-challenge/kernel_est_challenge.ipynb
+++ b/qml-classifier-challenge/kernel_est_challenge.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Kernel Estimator Challenge\n",
     "\n",
-    "In this challenge, you will use [Pennylane](https://github.com/PennyLaneAI/pennylane) and [Amazon Braket](https://github.com/aws/amazon-braket-examples) to implement a variational quantum classifier (VQC) to take on a supervised learning problem based on the work of [Havlíček et al. (2018)](https://arxiv.org/pdf/1804.11326.pdf). Complete each of the four TODOs in this notebook to construct and train a QML model to solve the binary classification task. You can use the `gen_binary.py` script to generate a new train/test dataset, and further test your model."
+    "In this challenge, you will use [Pennylane](https://github.com/PennyLaneAI/pennylane) and [Amazon Braket](https://github.com/aws/amazon-braket-examples) to implement a quantum kernel estimator to take on a supervised learning problem based on the work of [Havlíček et al. (2018)](https://arxiv.org/pdf/1804.11326.pdf). Complete each of the four TODOs in this notebook to construct and train a QML model to solve the binary classification task. You can use the `gen_binary.py` script to generate a new train/test dataset, and further test your model."
    ]
   },
   {
@@ -118,7 +118,9 @@
     "samples_per_set = 40\n",
     "n_samples = n_sets * samples_per_set\n",
     "X_data, Y_data = Xs[:n_samples], Ys[:n_samples]\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X_data, Y_data, train_size=1/n_sets)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
+    "    X_data, Y_data, train_size=1 / n_sets\n",
+    ")"
    ]
   },
   {
@@ -188,32 +190,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Quantum Kernel Estimation\n",
-    "\n",
-    "For the second classification protocol, we restrict ourselves to the binary label case, with $C = \\left\\{+1, −1\\right\\}$. Here it will be convenient to write $T = \\left\\{\\textbf{x}_1,...,\\textbf{x}_t\\right\\}$ with $t = \\left|T\\right|$; also let $y_i = m(\\textbf{x}_i)$ be the corresponding label. In this protocol we only use the quantum computer to estimate the $t \\times t$ kernel matrix $K(\\textbf{x}_i, \\textbf{x}_j) = \\left|\\langle\\Phi(\\textbf{x}_i)|\\Phi(\\textbf{x}_j)\\rangle\\right|^2$\n",
-    ", c.f. section VII. For all pairs of points $\\textbf{x}_i, \\textbf{x}_j \\in T$ in the the training data, we sample the overlap between feature states to obtain the matrix entry in the kernel. This fidelity can be estimated from the output probability of the circuit depicted in Fig. 5.b. by sampling the output distribution with $R$ shots and only taking the $0^n$ count. The frequency of the $0^n$ count is an estimator of the Kernel entry up to an error $\\epsilon = O(R^{−1/2})$. After the kernel matrix for the full training data has been constructed we use the conventional (classical) support vector machine classifier [1, 2]. The optimal hyperplane can be found by solving the dual quadratic program $L_D$ for the variables $\\alpha = \\left\\{\\alpha_i\\right\\}_{i=1...t}$ described in section III A eqn. (10). Hence, to train, we maximize\n",
-    "\n",
-    "$$L_D(\\alpha) = \\sum_{i=1}^t \\alpha_i - \\frac{1}{2} \\sum_{i,j=1}^t y_i y_j \\alpha_i \\alpha_j K(\\textbf{x}_i, \\textbf{x}_j),$$\n",
-    "\n",
-    "subject to $\\sum_{i=1}^t \\alpha_i y_i = 0$ and $\\alpha_i \\geq 0$. This problem is concave, and therefore efficiently solvable, whenever $K(\\textbf{x}_i, \\textbf{x}_j)$ is a positive definite matrix. Standard quadratic programming solvers can be used [3]. The solution to this problem will be given by a nonnegative vector $\\alpha^* = (\\alpha_1^*,...,\\alpha_t^*)$. Due to complementary slackness, c.f. eqn (18) we expect that many of the $\\alpha_i^*$ will be zero. Hence, there will only be subset of training samples that are needed to construct the optimal hyperplane. These samples are referred to as the support vectors.\n",
-    "\n",
-    "The training phase consists of the following steps:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$K(\\textbf{x}_i, \\textbf{x}_j) = \\left|\\langle\\Phi(\\textbf{x}_i)|\\Phi(\\textbf{x}_j)\\rangle\\right|^2$$\n",
-    "$$U_{\\phi_{\\{l,m\\}}(\\textbf{x})} = \\exp\\big(i\\phi_{\\{k,l\\}}(\\textbf{x})Z_kZ_l\\big)$$\n",
-    "\n",
-    "where we have followed Havlíček et al. and chosen $\\phi_{\\{ i \\}} = x_i$ and $\\phi_{\\{ 1,2 \\}} = (\\pi - x_1)(\\pi - x_2)$ "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -261,18 +237,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature mapping functions"
+    "## Quantum Kernel Estimation\n",
+    "\n",
+    "For this second classification protocol, we'll continue to restrict ourselves to the binary label case, with $C = \\left\\{+1, −1\\right\\}$. Here it will be convenient to write $T = \\left\\{\\textbf{x}_1,...,\\textbf{x}_t\\right\\}$ with $t = \\left|T\\right|$; also let $y_i = m(\\textbf{x}_i)$ be the corresponding label. In this protocol we only use the quantum computer to estimate the $t \\times t$ kernel matrix $K(\\textbf{x}_i, \\textbf{x}_j) = \\left|\\langle\\Phi(\\textbf{x}_i)|\\Phi(\\textbf{x}_j)\\rangle\\right|^2$\n",
+    ", c.f. section VII. For all pairs of points $\\textbf{x}_i, \\textbf{x}_j \\in T$ in the the training data, we sample the overlap between feature states to obtain the matrix entry in the kernel. This fidelity can be estimated from the output probability of the circuit depicted in Fig. 5.b. by sampling the output distribution with $R$ shots and only taking the $0^n$ count. The frequency of the $0^n$ count is an estimator of the Kernel entry up to an error $\\epsilon = O(R^{−1/2})$. After the kernel matrix for the full training data has been constructed we use the conventional (classical) support vector machine classifier [1, 2]. The optimal hyperplane can be found by solving the dual quadratic program $L_D$ for the variables $\\alpha = \\left\\{\\alpha_i\\right\\}_{i=1...t}$ described in section III A eqn. (10). Hence, to train, we maximize\n",
+    "\n",
+    "$$L_D(\\alpha) = \\sum_{i=1}^t \\alpha_i - \\frac{1}{2} \\sum_{i,j=1}^t y_i y_j \\alpha_i \\alpha_j K(\\textbf{x}_i, \\textbf{x}_j),$$\n",
+    "\n",
+    "subject to $\\sum_{i=1}^t \\alpha_i y_i = 0$ and $\\alpha_i \\geq 0$. This problem is concave, and therefore efficiently solvable, whenever $K(\\textbf{x}_i, \\textbf{x}_j)$ is a positive definite matrix. Standard quadratic programming solvers can be used [3]. The solution to this problem will be given by a nonnegative vector $\\alpha^* = (\\alpha_1^*,...,\\alpha_t^*)$. Due to complementary slackness, c.f. eqn (18) we expect that many of the $\\alpha_i^*$ will be zero. Hence, there will only be subset of training samples that are needed to construct the optimal hyperplane. These samples are referred to as the support vectors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_wires = 2  # number of qubits\n",
     "S_size = 2  # number of interactions considered\n",
-    "pset = powerset(range(n_wires), S_size)"
+    "pset = powerset(range(n_wires), S_size)\n",
+    "\n",
+    "shots = 500  # number of circuit executions\n",
+    "dev = qml.device(\"default.qubit\", wires=n_wires, shots=shots)"
    ]
   },
   {
@@ -296,6 +282,7 @@
     "        qml.RZ(-2 * x[2], wires=s[1])\n",
     "        qml.CNOT(wires=s)\n",
     "\n",
+    "\n",
     "adjoint_ansatz = qml.adjoint(ansatz)"
    ]
   },
@@ -305,10 +292,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shots = 500  # number of circuit executions\n",
-    "\n",
-    "dev = qml.device(\"default.qubit\", wires=n_wires, shots=shots)\n",
-    "\n",
     "@qml.qnode(dev)\n",
     "def kernel(x, z):\n",
     "    \"\"\"The quantum kernel.\n",
@@ -316,9 +299,9 @@
     "    Args:\n",
     "        x : shape (2,) tensor containing one input data vector\n",
     "        z : shape (2,) tensor containing one input data vector\n",
-    "    \n",
+    "\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    x_enc = encode_data(x)\n",
     "    z_enc = encode_data(z)\n",
     "\n",
@@ -326,37 +309,16 @@
     "        for i in range(n_wires):\n",
     "            qml.Hadamard(wires=i)\n",
     "        ansatz(x_enc)\n",
-    "    \n",
+    "\n",
     "    for _ in range(S_size):\n",
     "        adjoint_ansatz(z_enc)\n",
     "        for i in range(n_wires):\n",
     "            qml.Hadamard(wires=i)\n",
-    "            \n",
+    "\n",
     "    projector = np.zeros((2**n_wires, 2**n_wires))\n",
     "    projector[0, 0] = 1\n",
-    "    \n",
+    "\n",
     "    return qml.expval(qml.Hermitian(projector, wires=range(n_wires)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: ──H──RZ(-10.10)─╭●───────────╭●──H──RZ(-10.10)─╭●───────────╭●─╭●─────────────╭●───RZ(-10.10)†──H\n",
-      "1: ──H──RZ(-2.34)──╰X──RZ(7.52)─╰X──H──RZ(-2.34)──╰X──RZ(7.52)─╰X─╰X†──RZ(7.52)†─╰X†──RZ(-2.34)†───H\n",
-      "\n",
-      "──╭●─────────────╭●───RZ(-10.10)†──H─┤ ╭<𝓗(M0)>\n",
-      "──╰X†──RZ(7.52)†─╰X†──RZ(-2.34)†───H─┤ ╰<𝓗(M0)>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(qml.draw(kernel)(X_train[0], X_train[0]))"
    ]
   },
   {
@@ -367,7 +329,7 @@
    "source": [
     "def kernel_ideal(A, B):\n",
     "    \"\"\"Compute the matrix whose entries are the kernel\n",
-    "       evaluated on pairwise data from sets A and B.\"\"\"\n",
+    "    evaluated on pairwise data from sets A and B.\"\"\"\n",
     "    return np.array([[kernel(a, b) for b in B] for a in A])"
    ]
   },
